@@ -1,0 +1,1 @@
+$("#applicant_report_container").html("<%= escape_javascript(render("applicant_report")) %>");
